<resources>
    <string name="app_name">Nemo</string>
    <string name="app_theme">您的专属漫画分享平台</string>
    <string name="app_motto">儒墨少年&#160;&#160;匠心之作</string>
    <string name="app_creator">作者&#160;&#160;王振琦</string>
    <string name="app_explore_motto">海内知己&#160;&#160;天涯之邻</string>
    <string name="app_copyright">Copyright ©2016-2017 Nemo</string>
    <string name="prompt_log_in_welcome">欢迎登录Nemo</string>
    <string name="prompt_sign_up_welcome">欢迎加入Nemo</string>

    <string name="title_activity_nemo_account_security">帐号安全</string>
    <string name="title_activity_nemo_author_blog">作者博客</string>
    <string name="title_activity_nemo_album_book_list">专辑</string>
    <string name="title_activity_nemo_author_search">搜索作者</string>
    <string name="title_activity_nemo_book_info">漫画册</string>
    <string name="title_activity_nemo_book_share">漫画分享</string>
    <string name="title_activity_nemo_book_page_list">漫画展示</string>
    <string name="title_activity_nemo_book_search">搜索漫画</string>
    <string name="title_activity_nemo_email_bind">绑定邮箱</string>
    <string name="title_activity_nemo_log_in">登录</string>
    <string name="title_activity_nemo_password_update">修改密码</string>
    <string name="title_activity_nemo_review_edit">评论编辑</string>
    <string name="title_activity_nemo_sign_up">注册</string>

    <string name="title_activity_my_blog">我的博客</string>
    <string name="title_activity_my_book_create">创建漫画册</string>
    <string name="title_activity_my_book_info">漫画册</string>
    <string name="title_activity_my_book_list">我的漫画</string>
    <string name="title_activity_my_book_page_list">漫画分页</string>
    <string name="title_activity_my_favorite_book_list">我的收藏</string>
    <string name="title_activity_my_follow_author_list">我的关注</string>
    <string name="title_activity_my_follower_list">我的粉丝</string>
    <string name="title_activity_my_info_edit">编辑资料</string>
    <string name="title_activity_my_password_update">修改密码</string>
    <string name="title_activity_my_profile_edit">个人简介</string>
    <string name="title_activity_my_setting_list">我的设置 </string>

    <string name="format_date">yyyy-MM-dd</string>

    <string name="prompt_user_name">姓名</string>
    <string name="prompt_user_mobile_phone_number">手机号</string>
    <string name="prompt_user_password">密码</string>
    <string name="prompt_user_email">邮箱</string>
    <string name="prompt_user_motto">座右铭</string>
    <string name="prompt_user_profession">职业</string>
    <string name="prompt_user_location">所在地</string>
    <string name="prompt_user_sex">性别</string>
    <string name="prompt_user_sex_male">男</string>
    <string name="prompt_user_sex_female">女</string>
    <string name="prompt_user_sex_secrecy">保密</string>
    <string name="prompt_user_book">漫画册数</string>
    <string name="prompt_user_follow">关注</string>
    <string name="prompt_user_follower">粉丝</string>
    <string name="prompt_user_favorite">收藏</string>
    <string name="prompt_user_birthday">生日</string>
    <string name="prompt_user_profile">个人简介</string>
    <string name="prompt_user_profile_edit">编辑个人简介</string>
    <string name="prompt_user_avatar">头像</string>
    <string name="prompt_user_portrait">个人肖像</string>
    <string name="prompt_user_info">个人资料</string>

    <string name="prompt_user_password_update">修改密码</string>
    <string name="prompt_user_sex_pick">选择性别</string>
    <string name="prompt_user_profession_pick">选择职业</string>
    <string name="prompt_book_source_pick">选择方式</string>

    <string name="prompt_invalid_user_name">姓名格式错误</string>
    <string name="prompt_invalid_user_mobile_phone_number">手机号格式错误</string>
    <string name="prompt_invalid_user_password">密码格式错误</string>
    <string name="prompt_incorrect_user_password">密码错误</string>

    <string name="prompt_old_user_password">原密码</string>
    <string name="prompt_new_user_password">新密码</string>
    <string name="prompt_old_user_password_required">请填写原密码</string>
    <string name="prompt_new_user_password_required">请填写新密码</string>
    <string name="prompt_invalid_old_user_password">原密码格式错误</string>
    <string name="prompt_invalid_new_user_password">新密码格式错误</string>

    <string name="prompt_book_cover">封面</string>
    <string name="prompt_book_name">名称</string>
    <string name="prompt_book_style">风格</string>
    <string name="prompt_book_introduction">简介</string>
    <string name="prompt_book_collector">收藏</string>
    <string name="prompt_book_review">评论</string>
    <string name="prompt_book_url">网址</string>
    <string name="prompt_book_own">原创</string>
    <string name="prompt_book_show">展示</string>
    <string name="prompt_book_share">分享</string>

    <string name="prompt_book_style_pick">选择风格</string>

    <string name="prompt_book_cover_required">请选择漫画册封面</string>
    <string name="prompt_book_name_required">请填写漫画册名称</string>
    <string name="prompt_book_style_required">请选择漫画册风格</string>
    <string name="prompt_book_introduction_required">请填写漫画册简介</string>

    <string name="prompt_page_image">分页</string>

    <string name="prompt_album_cover">封面</string>
    <string name="prompt_album_order">序号</string>
    <string name="prompt_album_style">风格</string>
    <string name="prompt_album_book">漫画册数</string>

    <string name="prompt_unfilled">未填写</string>
    <string name="prompt_unselected">未选择</string>

    <string name="prompt_field_required">请填写内容</string>
    <string name="prompt_choice_required">请选择</string>
    <string name="prompt_operation_required">请选择您的操作</string>

    <string name="prompt_navigation_main">首页</string>
    <string name="prompt_navigation_album">专辑</string>
    <string name="prompt_navigation_explore">发现</string>
    <string name="prompt_navigation_me">我</string>
    <string name="prompt_nemo_sms_code">验证码</string>
    <string name="prompt_email_format_error">邮箱格式错误</string>
    <string name="prompt_email_bind_failed">邮箱绑定失败</string>

    <string name="prompt_number_zero">0</string>

    <string name="prompt_ok">确定</string>
    <string name="prompt_cancel">取消</string>
    <string name="prompt_delete">删除</string>
    <string name="prompt_update">更新</string>

    <string name="prompt_signing_up">正在注册</string>
    <string name="prompt_sign_up_success">注册成功</string>
    <string name="prompt_sign_up_failed">注册失败</string>
    <string name="prompt_logging_in">正在登录</string>
    <string name="prompt_log_in_success">登录成功</string>
    <string name="prompt_log_in_failed">登录失败</string>
    <string name="prompt_loading">正在加载</string>
    <string name="prompt_load_success">加载完成</string>
    <string name="prompt_load_failed">加载失败</string>
    <string name="prompt_creating">正在创建</string>
    <string name="prompt_create_success">创建成功</string>
    <string name="prompt_create_failed">创建失败</string>
    <string name="prompt_binding">正在绑定</string>
    <string name="prompt_bind_success">绑定成功</string>
    <string name="prompt_bind_failed">绑定失败</string>
    <string name="prompt_saving">正在保存</string>
    <string name="prompt_save_success">保存成功</string>
    <string name="prompt_save_failed">保存失败</string>
    <string name="prompt_deleting">正在删除</string>
    <string name="prompt_delete_success">删除成功</string>
    <string name="prompt_delete_failed">删除失败</string>
    <string name="prompt_edit_success">编辑成功</string>
    <string name="prompt_edit_failed">编辑失败</string>
    <string name="prompt_uploading">正在上传</string>
    <string name="prompt_upload_success">上传成功</string>
    <string name="prompt_upload_failed">上传失败</string>
    <string name="prompt_updating">正在更新</string>
    <string name="prompt_update_success">更新成功</string>
    <string name="prompt_update_failed">更新失败</string>
    <string name="prompt_review_edit">编辑评论</string>
    <string name="prompt_review_success">评论成功</string>
    <string name="prompt_review_failed">评论失败</string>

    <string name="action_update_avatar">修改头像</string>
    <string name="action_update_portrait">修改肖像</string>
    <string name="action_create_book">创建</string>
    <string name="action_follow_user">关注</string>
    <string name="action_collect_book">收藏</string>
    <string name="action_get_sms_code">获取验证码</string>
    <string name="action_go_album">欣赏专辑</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_in">登录</string>
    <string name="action_log_out">退出登录</string>
    <string name="action_review">评论</string>
    <string name="action_save">保存</string>
    <string name="action_search">搜索</string>
    <string name="action_search_author">搜索作者</string>
    <string name="action_search_book">搜索漫画</string>
    <string name="action_share">分享</string>
    <string name="action_sign_up">注册</string>
    <string name="action_upload_page">上传漫画分页</string>
    <string name="action_bind_email">绑定邮箱</string>
    <string name="action_update_user_password">修改密码</string>
    <string name="action_update_url">修改网址</string>

    <string name="prompt_my_subscriptions">我的订阅</string>
    <string name="prompt_my_books">我的漫画</string>
    <string name="prompt_my_followed">我的关注</string>
    <string name="prompt_my_follower">我的粉丝</string>
    <string name="prompt_my_collected">我的收藏</string>
    <string name="prompt_my_settings">我的设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
