<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rumofuture.nemo.view.fragment.NemoMainWelcomeFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_text_max_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_light_margin"
        android:text="@string/app_theme"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/nemo_text_big_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginEnd="@dimen/activity_horizontal_light_margin"
            android:background="@drawable/welcome_button_shape"
            android:text="@string/action_sign_up"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_button_text_size"/>

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/activity_horizontal_light_margin"
            android:background="@drawable/welcome_button_shape"
            android:text="@string/action_log_in"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/nemo_button_text_size"/>
    </LinearLayout>
</LinearLayout>
